updated vue-signup-form url

--- a/src/data/projectsInfos.json
+++ b/src/data/projectsInfos.json
@@ -21,7 +21,7 @@
     "name" : "SignUp-Form",
     "id" : 4,
     "img" : "https://res.cloudinary.com/dz209s6jk/image/upload/f_auto,q_auto,w_700/Challenges/q7yvs5yvgchjhjs2znay.jpg",
-    "url" : "vue-signup-form.vercel.app"
+    "url" : "https://vue-signup-form.vercel.app/"
   }
 ]
 
